Construção dá página principal

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,6 @@
 <cba-pre-loader></cba-pre-loader>
 <div class="culmn">
 	<cba-header></cba-header>
-	<cba-slide-home></cba-slide-home>
-	<cba-about></cba-about>
-	<cba-counter-up></cba-counter-up>
+	<router-outlet></router-outlet>
 	<cba-footer></cba-footer>
 </div>
