--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
                                     <span class="icon-bar"></span>
                                     <span class="icon-bar"></span>
                                 </button>
-                                <a class="navbar-brand" href="/">
+                                <a class="navbar-brand" [routerLink]="['/']">
                                     <img src="assets/images/concilia_without_text.png"/>
                                 </a>
                             </div>
@@ -25,8 +25,8 @@
                             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                                 <ul class="nav navbar-nav navbar-right">
-                                    <li><a href="#">Início</a></li>
-                                    <li class="dropdown">
+                                    <li routerLinkActive="active"><a [routerLink]="['/']">Início</a></li>
+                                    <li routerLinkActive="active" class="dropdown">
 										<a href="#" class="dropbtn">Programa</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a href="#">O que é</a></li>
@@ -36,7 +36,7 @@
 											<li><a href="#">Manual da identidade visual</a></li>
 										</ul>
 									</li>
-									<li class="dropdown">
+									<li routerLinkActive="active" class="dropdown">
 										<a href="#" class="dropbtn">Comunidades</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a href="#">Comunidades seladas</a></li>
@@ -48,7 +48,7 @@
 											<li><a href="#">CMAR</a></li>
 										</ul>
 									</li>
-									<li class="dropdown">
+									<li routerLinkActive="active" class="dropdown">
 										<a href="#" class="dropbtn">Imóveis</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a href="#">Banco de imóveis</a></li>
@@ -58,22 +58,22 @@
 											<li><a href="#">Acesso aos imóveis</a></li>
 										</ul>
 									</li>
-                                    <li class="dropdown">
+                                    <li routerLinkActive="active" class="dropdown">
 										<a href="#" class="dropbtn">Providências</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a href="#">Plano de providências</a></li>
 											<li><a href="#">Critérios e regras</a></li>
 										</ul>
 									</li>
-                                    <li><a href="#">Notícia</a></li>
-									<li class="dropdown">
+                                    <li routerLinkActive="active"><a href="#">Notícia</a></li>
+									<li routerLinkActive="active" class="dropdown">
 										<a href="#" class="dropbtn">Acervo</a>
 										<ul class="dropdown-content ul-submenu" style="right: auto;">
 											<li><a href="#">Fotos</a></li>
 											<li><a href="#">Videos</a></li>
 										</ul>
 									</li>
-                                    <li><a href="#">Contato</a></li>
+                                    <li routerLinkActive="active"><a [routerLink]="['/contato']">Contato</a></li>
                                 </ul>
                             </div>
 
