--- a/src/app/pages/home/timeline/timeline.component.css
+++ b/src/app/pages/home/timeline/timeline.component.css
@@ -4,23 +4,23 @@ body {
   line-height: 1.75;
 }
 
-#timeline {
+/*#timeline {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   background-color: #031625;
-}
+}*/
 #timeline:hover .tl-item {
-  width: 23.3333%;
+  /*width: 23.3333%;*/
 }
 
 .tl-item {
   -webkit-transform: translate3d(0, 0, 0);
           transform: translate3d(0, 0, 0);
   position: relative;
-  width: 20%;
+  width: 24.3%;
   height: 100vh;
-  min-height: 600px;
+  height: 500px;
   color: #fff;
   overflow: hidden;
   -webkit-transition: width 0.5s ease;
@@ -56,7 +56,7 @@ body {
   transition: opacity 0.5s ease, transform 0.5s ease, -webkit-transform 0.5s ease;
 }
 .tl-item:hover {
-  width: 30% !important;
+  /*width: 30% !important;*/
 }
 .tl-item:hover:after {
   opacity: 0;
@@ -132,4 +132,7 @@ body {
   transition: filter 0.5s ease, -webkit-filter 0.5s ease;
   -webkit-filter: grayscale(100%);
           filter: grayscale(100%);
+}
+.display-flex {
+	display: flex!important;
 }
