--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,3 @@
-
-
-/*
-Author: Bootstrapthemes
-Author URI: http://bootstrapthemes.co
-*/
-/* ==========================================================================
-   Author's custom styles
-   ========================================================================== */
 html,
 body {
     background-color: #fff;
@@ -19,6 +10,7 @@ body {
     font-weight: 400;
     width:100%;
     font-family: 'Raleway', sans-serif;
+	overflow-y: auto;
 }
 .preloader {
     position: fixed;
@@ -221,7 +213,7 @@ p:last-child {
 }
 
 .lightbg {
-    background-color: #f9f9f9;
+    background-color: #bdc3c7;
 }
 .bg-grey{
     background-color: #ddd;
@@ -277,7 +269,7 @@ ul{
     margin-bottom: 4rem;
 }
 .overlay {
-    background-color: rgba(41, 39, 34, 0.75);
+    background-color: rgba(41, 39, 34, 0.35);
     width: 100%;
     height: 670px;
 }
@@ -287,7 +279,7 @@ ul{
     height:auto;
 }
 .video_overlay {
-    background-color: rgba(41, 39, 34, 0.75);
+    background-color: rgba(41, 39, 34, 0.25);
     width: 100%;
     height: auto;
 }
@@ -542,7 +534,7 @@ input::-ms-input-placeholder {
     z-index: 300;
     box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
     -webkit-box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
-    background-color:rgba(34, 61, 97, 1);
+    background-color:rgba(3, 22, 37, 0.75);
     -webkit-transition:all .3s;
     -moz-transition:all .3s;
     transition:all .3s;
@@ -930,7 +922,7 @@ input::-ms-input-placeholder {
 }
 .counter .main_counter_area{}
 .counter .main_counter_area{
-    padding:80px 20px;
+    padding:15% 20px;
 }
 .counter .main_counter_area .single_counter{}
 .counter .main_counter_area .single_counter .single_counter_item{
@@ -1149,15 +1141,15 @@ button.btn-md:hover {
 }
 #portfoliowork {
     margin: 1rem 0;
-    -webkit-column-count: 3;
-    -moz-column-count: 3;
-    column-count: 3;
+    /*-webkit-column-count: 2;
+    -moz-column-count: 2;
+    column-count: 2;
     -webkit-column-gap: 1rem;
     -moz-column-gap: 1rem;
     column-gap: 1rem;
-    -webkit-column-width: 33.33333333333333%;
-    -moz-column-width: 33.33333333333333%;
-    column-width: 33.33333333333333%;
+    -webkit-column-width: 50%;
+    -moz-column-width: 50%;
+    column-width: 50%;*/
 }
 .tile {
     display: none;
@@ -1167,7 +1159,7 @@ button.btn-md:hover {
 
 .scale-anm {
     margin: 0 0 1.125rem;
-    width: 100%;
+    /*width: 100%;*/
 }
 
 
@@ -1186,19 +1178,19 @@ button.btn-md:hover {
 }
 
 .grid_item_overlay{
-    position: absolute;
-    left:10%;
-    top:10%;
-    width:80%;
-    height: 80%;
-    background: rgba(255, 114, 0, 0.75);
-    color:#fff;
-    padding: 20px;
-    opacity: 0;
-    transition: 0.6s;
-    text-align: center;
-    padding-top:35%;
-    z-index: 99;
+	position: absolute;
+	left: 10%;
+	top: 10%;
+	width: 80%;
+	height: 80%;
+	background: rgba(255, 114, 0, 0.75);
+	color: #fff;
+	padding: 20px;
+	opacity: 0;
+	transition: 0.6s;
+	text-align: center;
+	padding-top: 10%;
+	z-index: 99;
 }
 .g_overlay_1{
     padding-top:16%;
@@ -1372,8 +1364,7 @@ button.btn-md:hover {
 
 /*contact section css*/
 .contact{
-    background: url(assets/images/contactbg.png) no-repeat center center;
-    background-size: cover;
+    background: #eee;
 }
 
 .contact .single_contact_info{
@@ -1622,7 +1613,7 @@ button.btn-md:hover {
 	text-transform: uppercase;
 }
 .dropdown-content {
-	background-color: rgba(34, 61, 97, 1);
+	background-color: rgba(3, 22, 37, 0.75);
     display: none;
     position: absolute;
     min-width: 220px;
@@ -1702,4 +1693,60 @@ footer ul li {
 }
 .overlay-min{
 	height: 400px;
+}
+.row-partners {
+	margin-top: 50px;
+}
+h3.title-news {
+	font-weight: bold;
+}
+p.subtitle-news {
+	font-weight: bold;
+	margin-top: 10px;
+	font-size: 1.2rem;
+}
+.read-more-news-overlay {
+    background-color: rgba(255, 114, 0, 0.75);
+    width: 100%;
+    height: auto;
+}
+.read-more-news-icon {
+	position: relative;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	cursor: pointer;
+}
+.visit-media-overlay {
+    background-color: #eee;
+    width: 100%;
+    height: auto;
+}
+.visit-media-icon {
+    position: relative;
+	margin-top: 50px;
+	margin-bottom: 20px;
+    cursor: pointer;
+}
+.btn-btsp-info {
+	background-color: #5bc0de;
+	border-color: #46b8da;
+	font-size: 1rem;
+	font-weight: bold;
+}
+@media (max-width: 1000px){
+	ul.ul-submenu{
+		width: 100%!important;
+		position: inherit!important;
+		background-color: rgba(24, 51, 87, 1);
+		max-height: 340px;
+	}
+}
+.border-road {
+	height: 100px;
+	background-image: url(assets/images/road_fav.png);
+	background-position: center;
+	background-size: contain;
+}
+.font-3rem {
+	font-size: 3.2rem;
 }
