Atualizando página de notícias

--- a/src/app/pages/home/highlights-news/highlights-news.component.html
+++ b/src/app/pages/home/highlights-news/highlights-news.component.html
@@ -1,5 +1,5 @@
 <section id="news portfolio" class="portfolio lightbg">
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="main_portfolio sections">
                 <div class="col-sm-4">
