--- a/src/app/pages/news/news.component.html
+++ b/src/app/pages/news/news.component.html
@@ -11,191 +11,125 @@
         </div>
     </div>
 </section>
-<link href='https://fonts.googleapis.com/css?family=Raleway:400,700|Merriweather' rel='stylesheet' type='text/css'>
-<section>
+<section id="portfolio" class="portfolio lightbg" style="padding-top:100px;padding-bottom:100px">
     <div class="container">
         <div class="row">
-            <div class="col-sm-12">
-				<div id="all">
-				  <div class="view view-first">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703e9208259b507928ad72a/1459874081584/xzKx01n.png" />
-				    <div class="mask">
-				      <h2>Empire State</h2>
-				      <p>A cool description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eaab37013bdcee28c077/1459874476977/gw9SfTu.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2>Midtown</h2>
-				      <p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-tenth">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb0cb09f95f41391ea85/1459874573710/j07SfQZ.png" />
-				    <div class="mask">
-				      <h2>The Only Living Boy in New York</h2>
-				      <p>Words and such, a whole lot more of muh flippin' words.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb2e746fb98cc2510ebd/1459874606989/PsZyN43.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2 id="testimonials">Upper East Side</h2>
-				      <p>&ldquo;A description of some sort between these tags. I am so cool ye and awesomely awesome. He was cool.&rdquo;</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				</div>
-
-			</div>
-			<div class="col-sm-12">
-				<div id="all">
-				  <div class="view view-first">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703e9208259b507928ad72a/1459874081584/xzKx01n.png" />
-				    <div class="mask">
-				      <h2>Empire State</h2>
-				      <p>A cool description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eaab37013bdcee28c077/1459874476977/gw9SfTu.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2>Midtown</h2>
-				      <p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-tenth">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb0cb09f95f41391ea85/1459874573710/j07SfQZ.png" />
-				    <div class="mask">
-				      <h2>The Only Living Boy in New York</h2>
-				      <p>Words and such, a whole lot more of muh flippin' words.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb2e746fb98cc2510ebd/1459874606989/PsZyN43.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2 id="testimonials">Upper East Side</h2>
-				      <p>&ldquo;A description of some sort between these tags. I am so cool ye and awesomely awesome. He was cool.&rdquo;</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				</div>
-
-			</div>
-			<div class="col-sm-12">
-				<div id="all">
-				  <div class="view view-first">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703e9208259b507928ad72a/1459874081584/xzKx01n.png" />
-				    <div class="mask">
-				      <h2>Empire State</h2>
-				      <p>A cool description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eaab37013bdcee28c077/1459874476977/gw9SfTu.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2>Midtown</h2>
-				      <p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-tenth">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb0cb09f95f41391ea85/1459874573710/j07SfQZ.png" />
-				    <div class="mask">
-				      <h2>The Only Living Boy in New York</h2>
-				      <p>Words and such, a whole lot more of muh flippin' words.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb2e746fb98cc2510ebd/1459874606989/PsZyN43.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2 id="testimonials">Upper East Side</h2>
-				      <p>&ldquo;A description of some sort between these tags. I am so cool ye and awesomely awesome. He was cool.&rdquo;</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				</div>
-
-			</div>
-			<div class="col-sm-12">
-				<div id="all">
-				  <div class="view view-first">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703e9208259b507928ad72a/1459874081584/xzKx01n.png" />
-				    <div class="mask">
-				      <h2>Empire State</h2>
-				      <p>A cool description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eaab37013bdcee28c077/1459874476977/gw9SfTu.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2>Midtown</h2>
-				      <p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-
-				  <div class="view view-tenth">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb0cb09f95f41391ea85/1459874573710/j07SfQZ.png" />
-				    <div class="mask">
-				      <h2>The Only Living Boy in New York</h2>
-				      <p>Words and such, a whole lot more of muh flippin' words.</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				  <div class="view view-second">
-				    <img src="http://static1.squarespace.com/static/55ac6d80e4b0a964784b2f80/t/5703eb2e746fb98cc2510ebd/1459874606989/PsZyN43.png" />
-				    <div class="mask"></div>
-				    <div class="content">
-				      <h2 id="testimonials">Upper East Side</h2>
-				      <p>&ldquo;A description of some sort between these tags. I am so cool ye and awesomely awesome. He was cool.&rdquo;</p>
-				      <a href="#" class="info">Read More</a>
-				    </div>
-				  </div>
-
-				</div>
-
-			</div>
-
+                <div class="col-sm-6">
+                    <div class="head_title">
+                        <h3 class="font-3rem">EM DESTAQUE</h3>
+                        <div class="separator"></div>
+                    </div>
+                </div>
 		</div>
-	</div>
+		<div class="row">
+			<div class="col-sm-6 bcards" >
+				<div class="view view-first">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask">
+					<h2>Concilia BR-381 e Anel define regras e critérios para o reassentamento</h2>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 bcards" >
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 web ">
+				<div class="view view-first">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask">
+					<h2>The Only Living Boy in New York</h2>
+					<p>Words and such, a whole lot more of muh flippin' words.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 web" >
+				<div class="view view-first">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 bcards" >
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 web" >
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 flyers">
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 flyers">
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+
+            <div class="col-sm-6 bcards" >
+                <div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+            <div class="col-sm-6 flyers">
+				<div class="view view-tenth">
+				  <img style="width:500px; height:300px" src="assets/images/test_new.jpg" />
+				  <div class="mask"></div>
+				  <div class="content">
+					<h2>Midtown</h2>
+					<p>A description of some sort between these tags. I am so cool and awesomely awesome.</p>
+					<a href="#" class="info">Read More</a>
+				  </div>
+				</div>
+            </div>
+		</div>
+    </div>
 </section>
