--- a/src/app/pages/news/news.component.css
+++ b/src/app/pages/news/news.component.css
@@ -1,8 +1,3 @@
-h1 {
-  color: white;
-  padding-left: 10px;
-}
-
 #hover {
   color: rgba(188, 175, 204, 0.9);
 }
@@ -33,8 +28,8 @@ div#all {
 
 .view .mask,
 .view .content {
-  width: 300px;
-  height: 200px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   top: 0;
@@ -51,11 +46,12 @@ div#all {
   color: #fff;
   text-align: center;
   position: relative;
-  font-size: 17px;
+  font-size: 2rem;
   font-family: Raleway, serif;
   padding: 10px;
   /*background: rgba(0, 0, 0, 0.8);*/
-  margin: 20px 0 0 0
+  margin: 20px 0 0 0;
+  font-weight: bold;
 }
 
 .view p {
