Alterações do layout

--- a/src/app/pages/civil-action/civil-action.component.html
+++ b/src/app/pages/civil-action/civil-action.component.html
@@ -28,11 +28,13 @@
 				<div class="col-sm-6">
 					<p class="font-124">Em 2007, os moradores que ocupam as margens do Anel Rodoviário de Belo Horizonte e da BR-381 Norte receberam ordem de despejo para que o governo federal pudesse usar as faixas de domínio para as melhorias e duplicação das  estradas, sobrecarregadas com fluxo maior do que sua capacidade.  Preocupados com a remoção dos moradores,  um grupo de mulheres dessas comunidades se mobilizou para impedir que a remoção fosse feita sem considerar prazos e sem prever o reassentamento das famílias.</p>
 					<p class="font-124">Conhecidas como Mães do Anel, (movimento que futuramente deu origem ao CMAR – Comunidade de Moradores de Áreas de Risco), esse grupo procurou a Defensoria Pública da União (DPU) e o Ministério Público Federal (MPF) para buscar alternativas para a execução das obras de revitalização e duplicação das rodovias sem deixar de levar em consideração o reassentamento das famílias que vivem às margens do Anel e da BR-381.</p>
-					<p class="font-124">Em 2013, o MPF e a DPU atuaram em favor das comunidades afetadas pelas obras dessas rodovias e moveram a ACP (Ação Civil Pública nº 57367-09.2013.4.01.3800) que deu origem ao Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381. O Concilia BR-381 e Anel é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), implementado desde 2014.</p>
 				</div>
 				<div class="col-sm-6">
-						<p class="font-124">Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Município de Belo Horizonte, Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Comunidade de Moradores de Áreas de Risco (CMAR) são parceiros do Concilia.</p>
-						<img src="assets/images/plano_providencias.jpg" alt="" style="max-width: inherit;">
+					<p class="font-124">Em 2013, o MPF e a DPU atuaram em favor das comunidades afetadas pelas obras dessas rodovias e moveram a ACP (Ação Civil Pública nº 57367-09.2013.4.01.3800) que deu origem ao Programa Judicial de Conciliação para Remoção e Reassentamento Humanizados de Famílias do Anel Rodoviário e BR-381. O Concilia BR-381 e Anel é uma iniciativa da Justiça Federal e do Departamento Nacional de Infraestrutura de Transportes (DNIT), implementado desde 2014.</p>
+					<p class="font-124">Ministério Público Federal (MPF), Defensoria Pública da União (DPU), Município de Belo Horizonte, Companhia Urbanizadora e de Habitação de Belo Horizonte (URBEL) e Comunidade de Moradores de Áreas de Risco (CMAR) são parceiros do Concilia.</p>
+				</div>
+				<div class="col-sm-12">
+					<img src="assets/images/fotoacp.jpg" alt="">
 				</div>
 			</div>
 		</div>
