--- a/src/app/pages/news-detail/news-detail.component.css
+++ b/src/app/pages/news-detail/news-detail.component.css
@@ -1,3 +1,26 @@
 #show-modal-concilia {
 	border-radius: 5px;
 }
+.btn-danger {
+	color: #fff;
+    background-color: #d9534f;
+    border-color: #d43f3a;
+	display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -ms-touch-action: manipulation;
+    touch-action: manipulation;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
