--- a/src/app/pages/news-detail/news-detail.component.html
+++ b/src/app/pages/news-detail/news-detail.component.html
@@ -32,9 +32,20 @@
 			</div>
 		</div>
 		<div class="row">
-			<div class="col-sm-12">
+			<div class="col-sm-4" style="margin-top:50px">
+				<a [routerLink]="['/noticias']" class="btn btn-danger">
+					<i class="fa fa-arrow-left" aria-hidden="true"></i>
+					<h3 style="display: inline-block;">Notícias</h3>
+				</a>
+			</div>
+			<div class="col-sm-4 col-sm-offset-1">
 				<div class="head_title" style="margin-top:50px">
-					<a class="btn btn-primary" id="show-modal-concilia"><h3 style="color: white;cursor:pointer;">Sobre o concilia</h3></a>
+					<a class="btn btn-primary" id="show-modal-concilia">
+						<i class="fa fa-info-circle fa-2x" aria-hidden="true"></i>
+						<h3 style="color: white;cursor:pointer;display: inline-block;">
+							O concilia
+						</h3>
+					</a>
 
 				</div>
 			</div>
